--- a/about.css
+++ b/about.css
@@ -5,13 +5,13 @@
 .conteudo-quarto {
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    min-height: unset;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    padding: 40px 20px;
+    padding: 60px 20px;
     box-sizing: border-box;
     color: #fff;
     text-align: center;
