--- a/main.css
+++ b/main.css
@@ -67,9 +67,15 @@
     flex-direction: column;
     align-items: flex-start;
     max-width: 1120px;
-    margin: 30px 350px;
+    margin: 30px auto;
     color: white;
     font-weight: 500;
+}
+
+.unidades ul {
+    padding-left: 0;
+    list-style: none;
+    
 }
 
 .enderecos {
@@ -96,15 +102,3 @@
 
 }
 
-@media (max-width: 768px) {
-
-    .enderecos {
-        align-items: flex-start;
-        gap: 0.5rem 0.5rem;
-    }
-
-    .enderecos .bi-geo-alt-fill {
-        margin-top: 5px;
-        align-self: flex-start;
-    }
-}
